Fix overflow problem

--- a/src/css/Photos.css
+++ b/src/css/Photos.css
@@ -40,7 +40,7 @@ button {
 
 .introduction {
   width: 78%;
-  height: 18.75em;
+  height: 300px;
   background-color:#F2F3F4;
   font-style: normal;
   border-radius: 0.625em;
@@ -145,7 +145,9 @@ button {
   display: inline-block;
   height:100%;
   width: 55%;
+  overflow:hidden;
 }
+
 
 .right-side-modal {
   height:100%;
@@ -173,6 +175,7 @@ button {
 .commentSec {
   width: 100%;
   display: inline-block;
+  overflow: hidden;
 }
 
 .closeModal {
